--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "NODE_ENV=development DEBUG=app node app.js",
-    "build": "DEBUG=app node app.js"
+    "build": "DEBUG=app node app.js",
+    "deploy": "deploy -d build -b gh-pages"
   },
   "name": "mp-doc-one-page",
   "version": "1.0.0",
@@ -13,5 +14,8 @@
     "cheerio": "^1.0.0-rc.2",
     "debug": "^4.0.1",
     "node-fetch": "^2.2.0"
+  },
+  "devDependencies": {
+    "pushdeploy": "^0.0.1"
   }
 }
